--- a/docker/requirements.txt
+++ b/docker/requirements.txt
@@ -23,3 +23,6 @@ kneed==0.8.2
 tslearn==0.5.3.2
 scikit-learn==1.1.1
 pycryptodome==3.15.0
+requests-aws-sign==0.1.6
+requests-oauthlib==1.3.1
+requests==2.27.1
