--- a/scripts/requirements.txt
+++ b/scripts/requirements.txt
@@ -41,3 +41,4 @@ google-auth==2.20.0
 google-auth-httplib2==0.1.0
 google-cloud-service-management==1.6.1
 googleapis-common-protos==1.59.1
+pandas==1.4.3
