--- a/docker/requirements.txt
+++ b/docker/requirements.txt
@@ -1,28 +1,23 @@
-modular-sdk>=2.2.0,<=3.0.0
+modular-sdk>=3.2.0,<4.0.0
 boto3==1.26.80
 botocore==1.29.80
-dnspython==2.2.1
-jmespath==1.0.1
-joblib==1.1.0
+certifi==2023.7.22
+cffi==1.15.1
+cryptography==41.0.3
+dnspython==2.4.2
+dynamodb-json==1.3
 mongoengine==0.24.2
-numpy==1.23.1
-pandas==1.4.3
-pymongo==3.12.0
-python-dateutil==2.8.2
-pytz==2022.1
-s3transfer==0.6.0
-scikit-learn==1.1.1
-scipy==1.9.0
-six==1.16.0
-sklearn==0.0
-threadpoolctl==3.1.0
-urllib3==1.26.15
-xgboost==1.6.1
-cron-converter==1.0.1
-kneed==0.8.2
-tslearn==0.5.3.2
-scikit-learn==1.1.1
-pycryptodome==3.15.0
-requests-aws-sign==0.1.6
-requests-oauthlib==1.3.1
-requests==2.27.1
+oauthlib==3.2.2
+pymongo==4.5.0
+pynamodb==5.3.2
+requests==2.31.0
+typing_extensions==4.7.1
+pycryptodome==3.19.0
+joblib==1.3.2
+numpy==1.25.2
+pandas==2.1.1
+scikit-learn==1.3.1
+scipy==1.11.3
+cron-converter==1.0.2
+kneed==0.8.5
+tslearn==0.6.2
