update lambda platform

--- a/src/lambdas/r8s_report_generator/lambda_config.json
+++ b/src/lambdas/r8s_report_generator/lambda_config.json
@@ -25,5 +25,8 @@
     "${lambda_security_group}"
   ],
   "ephemeral_storage": 512,
-  "url_config": {}
+  "url_config": {},
+  "platforms": [
+    "manylinux2014_x86_64"
+  ]
 }
