--- a/src/lambdas/r8s_report_generator/requirements.txt
+++ b/src/lambdas/r8s_report_generator/requirements.txt
@@ -1,4 +1,4 @@
-modular-sdk>=3.2.0,<4.0.0
+git+https://github.com/epam/modular-sdk@add-tenant-attr-to-parent
 boto3==1.26.80
 botocore==1.29.80
 certifi==2023.7.22
