--- a/src/lambdas/r8s_api_handler/lambda_config.json
+++ b/src/lambdas/r8s_api_handler/lambda_config.json
@@ -16,6 +16,7 @@
     "cognito_user_pool_name": "${cognito_user_pool_name}",
     "r8s_job_queue": "${r8s_job_queue}",
     "r8s_job_definition": "${r8s_job_definition}",
+    "force_rescan": "${force_rescan}",
     "DEBUG": "${DEBUG}"
   },
   "publish_version": true,
