--- a/src/lambdas/r8s_api_handler/lambda_config.json
+++ b/src/lambdas/r8s_api_handler/lambda_config.json
@@ -17,6 +17,7 @@
     "r8s_job_queue": "${r8s_job_queue}",
     "r8s_job_definition": "${r8s_job_definition}",
     "force_rescan": "${force_rescan}",
+    "lm_token_lifetime_minutes": "${lm_token_lifetime_minutes}",
     "DEBUG": "${DEBUG}"
   },
   "publish_version": true,
