--- a/src/lambdas/r8s_api_handler/lambda_config.json
+++ b/src/lambdas/r8s_api_handler/lambda_config.json
@@ -18,7 +18,8 @@
     "r8s_job_definition": "${r8s_job_definition}",
     "force_rescan": "${force_rescan}",
     "lm_token_lifetime_minutes": "${lm_token_lifetime_minutes}",
-    "DEBUG": "${DEBUG}"
+    "DEBUG": "${DEBUG}",
+    "logs_expiration": "${logs_expiration}"
   },
   "publish_version": true,
   "alias": "${lambdas_alias_name}",
