--- a/src/lambdas/r8s_report_generator/lambda_config.json
+++ b/src/lambdas/r8s_report_generator/lambda_config.json
@@ -14,7 +14,8 @@
   ],
   "env_variables": {
     "RABBITMQ_APPLICATION_ID": "${RABBITMQ_APPLICATION_ID}",
-    "log_level": "${log_level}"
+    "log_level": "${log_level}",
+    "logs_expiration": "${logs_expiration}"
   },
   "publish_version": true,
   "alias": "${lambdas_alias_name}",
