--- a/src/lambdas/r8s_api_handler/lambda_config.json
+++ b/src/lambdas/r8s_api_handler/lambda_config.json
@@ -8,6 +8,7 @@
   "memory": 1024,
   "timeout": 30,
   "lambda_path": "lambdas/r8s_api_handler",
+  "logs_expiration": "${logs_expiration}",
   "dependencies": [],
   "event_sources": [],
   "env_variables": {
@@ -18,8 +19,7 @@
     "r8s_job_definition": "${r8s_job_definition}",
     "force_rescan": "${force_rescan}",
     "lm_token_lifetime_minutes": "${lm_token_lifetime_minutes}",
-    "DEBUG": "${DEBUG}",
-    "logs_expiration": "${logs_expiration}"
+    "DEBUG": "${DEBUG}"
   },
   "publish_version": true,
   "alias": "${lambdas_alias_name}",
