--- a/src/lambdas/r8s_api_handler/requirements.txt
+++ b/src/lambdas/r8s_api_handler/requirements.txt
@@ -1,4 +1,4 @@
-modular-sdk>=5.0.0,<6.0.0
+git+https://github.com/epam/modular-sdk.git@feature/separate-dojo-types
 boto3==1.26.80
 botocore==1.29.80
 certifi==2023.7.22
