--- a/scripts/requirements.txt
+++ b/scripts/requirements.txt
@@ -8,7 +8,7 @@ click==7.1.2
 colorama==0.4.6
 configobj==5.0.6
 cryptography==37.0.4
-dynamodb-json==1.3
+dynamodb-json~=1.4.2
 idna==3.3
 isodate==0.6.1
 jmespath==1.0.1
@@ -16,7 +16,7 @@ mongoengine==0.24.2
 msrest==0.7.1
 oauthlib==3.2.0
 pycparser==2.21
-pynamodb==5.3.2
+pynamodb>=5.5.1,<6
 python-dateutil==2.8.2
 PyYAML==6.0
 requests==2.27.1
