Fixed the naming typo in service description

--- a/deployment/aws-ami/debian-minikube/r8s-run.service
+++ b/deployment/aws-ami/debian-minikube/r8s-run.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=sre-run script running at bootstrap
+Description=r8s-run script running at bootstrap
 
 [Service]
 ExecStart=/usr/local/bin/r8s-run.sh
