--- a/deployment/helm/rightsizer/Chart.yaml
+++ b/deployment/helm/rightsizer/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-appVersion: 4.0.0
+appVersion: "4.0.0"
 dependencies:
 - condition: vault.enabled
   name: vault
@@ -24,4 +24,4 @@ dependencies:
 description: A Helm chart for the rightsizer
 name: rightsizer
 type: application
-version: 4.0.0
+version: "4.0.0"
