--- a/r8s/pyproject.toml
+++ b/r8s/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "r8scli"
-description = "Rule engine CLI"
+description = "Rightsizer CLI"
 requires-python = ">=3.10"
 readme = "README.md"
 dynamic = ["version"]
