--- a/deployment/helm/rightsizer/Chart.yaml
+++ b/deployment/helm/rightsizer/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-appVersion: "4.0.0"
+appVersion: "3.11.0"
 dependencies:
 - condition: vault.enabled
   name: vault
@@ -21,7 +21,11 @@ dependencies:
   name: modular-api
   repository: s3://charts-repository/syndicate/
   version: 4.1.4
+- condition: metric-collector.enabled
+  name: metric-collector
+  repository: s3://charts-repository/syndicate/
+  version: 3.11.0
 description: A Helm chart for the rightsizer
 name: rightsizer
 type: application
-version: "4.0.0"
+version: "3.11.0"
