update ami id in cf template

--- a/deployment/aws-ami/debian-minikube/rightsizer-cf-template.yaml
+++ b/deployment/aws-ami/debian-minikube/rightsizer-cf-template.yaml
@@ -29,7 +29,7 @@ Mappings:
     eu-central-1:
       ImageId: ami-xxxxxxxxxxxxxxxxx
     us-east-1:
-      ImageId: ami-xxxxxxxxxxxxxxxxx
+      ImageId: ami-0894db8dba66349bd
     us-east-2:
       ImageId: ami-xxxxxxxxxxxxxxxxx
     us-west-1:
