--- a/deployment/helm/rightsizer/templates/deployment.yaml
+++ b/deployment/helm/rightsizer/templates/deployment.yaml
@@ -35,7 +35,7 @@ spec:
       containers:
         - name: rightsizer
           image: "{{ .Values.image.repository }}:{{ default .Chart.AppVersion .Values.image.tag }}"
-          imagePullPolicy: {{ .Values.image.pullPolicy }}
+          imagePullPolicy: "{{ .Values.image.pullPolicy }}"
           ports:
             - containerPort: 8000
               name: http
@@ -59,26 +59,26 @@ spec:
                   name: {{ include "rightsizer.fullname" . }}
                   key: modular-db-name
             - name: modular_service_mode
-              value: { { default "docker" .Values.modularSdk.serviceMode } }
-            { { - if ne (default "docker" .Values.modularSdk.serviceMode) "docker" } }
+              value: "{{ default \"docker\" .Values.modularSdk.serviceMode }}"
+            {{- if ne (default "docker" .Values.modularSdk.serviceMode) "docker" }}
             - name: modular_assume_role_arn
-              value: { { .Values.modularSdk.assumeRoleArn } }
+              value: "{{ .Values.modularSdk.assumeRoleArn }}"
             - name: MODULAR_AWS_REGION
-              value: { { .Values.modularSdk.awsRegion } }
-            { { - end } }
+              value: "{{ .Values.modularSdk.awsRegion }}"
+            {{- end }}
             - name: SERVICE_MODE
               value: docker
             - name: SERVICE_MODE_S3
-              value: { { default "docker" .Values.syndicate-rightsizer.service_mode_s3 } }
+              value: "{{ default \"docker\" .Values.syndicate-rightsizer.service_mode_s3 }}"
             - name: MONGO_URI
               value: "mongodb://$(modular_mongo_user):$(modular_mongo_password)@$(modular_mongo_url)/"
             - name: CAAS_MONGO_DATABASE
               valueFrom:
                 configMapKeyRef:
-                  name: {{ include "rightsizer.fullname" . }}
+                  name: "{{ include \"rightsizer.fullname\" . }}"
                   key: db-name
             - name: VAULT_URL
-              value: {{ .Values.vaultService }}
+              value: "{{ .Values.vaultService }}"
             - name: VAULT_SERVICE_SERVICE_PORT
               value: "{{ .Values.vaultPort }}"
             - name: VAULT_ENDPOINT
@@ -108,7 +108,7 @@ spec:
             - name: CAAS_INNER_CACHE_TTL_SECONDS
               valueFrom:
                 configMapKeyRef:
-                  name: {{ include "rightsizer.fullname" . }}
+                  name: "{{ include \"rightsizer.fullname\" . }}"
                   key: inner-cache-ttl-seconds
             - name: R8S_SYSTEM_USER_PASSWORD
               valueFrom:
