Update Values in deployment.yaml

--- a/deployment/helm/rightsizer/templates/deployment.yaml
+++ b/deployment/helm/rightsizer/templates/deployment.yaml
@@ -112,5 +112,9 @@ spec:
             - name: log_level
               value: "DEBUG"
             - name: MODULAR_SDK_MONGO_URI
-              value: {{ .Values.modularSdk.mongoUri }}
+            { { - if .Values.modularSdk.mongoUri } }
+            value: "{{ .Values.modularSdk.mongoUri }}"
+            { { - else } }
+            value: "mongodb://$(MODULAR_SDK_MONGO_USER):$(MODULAR_SDK_MONGO_PASSWORD)@{{ .Values.mongoService }}:{{ .Values.mongoPort }}/"
+            { { - end } }
       restartPolicy: Always
