--- a/deployment/helm/vault/values.yaml
+++ b/deployment/helm/vault/values.yaml
@@ -6,9 +6,10 @@ service:
 ui:
   enabled: 'false'
 
+# previous 1.17.2
 image:
   repository: hashicorp/vault
-  tag: 1.17.2
+  tag: 1.19.5
   pullPolicy: IfNotPresent
 
 
