--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,9 +3,14 @@ name: ci-for-build-and-tests
 on:
   pull_request:
     branches: [ "main", "develop" ]
+  pull_request_review:
+    types: [ submitted ]
 
 jobs:
   check_modified_files:
+    if: >
+      github.event_name == 'pull_request' && github.event.pull_request.head.repo.full_name == github.repository ||
+      github.event_name == 'pull_request_review' && github.event.review.state == 'approved' && github.event.pull_request.head.repo.full_name != github.repository
     name: Check modified files in directories
     runs-on: ubuntu-latest
     outputs:
