--- a/r8s/pyproject.toml
+++ b/r8s/pyproject.toml
@@ -10,10 +10,10 @@ requires-python = ">=3.10"
 readme = "README.md"
 dynamic = ["version"]
 dependencies = [
-    "click==7.1.2",
+    "click==8.3.0",
     "prettytable==3.9.0",
-    "python-dateutil==2.8.2",
-    "modular-cli-sdk[hvac]==2.0.0",
+    "python-dateutil==2.9.0.post0",
+    "modular-cli-sdk[hvac]==3.1.0",
     "requests>=2.31.0,<3.0.0"
 ]
 
